# SWE-Challenge-LA

./: .dockerignore  .env.development  .env.example  .env.production  .gitignore  Dockerfile  README.md  cloudbuild.yaml  docker-compose.yml  latam-swe-challenge-insomnia.json  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/middlewares/: logging.py
app/api/v1/: router.py  users.py
app/core/: config.py  exceptions.py
app/db/: client.py
app/db/models/: user.py
app/schemas/: user.py
app/services/: user_service.py
app/utils/: pagination.py
tests/: conftest.py  test_users.py
